basic styles and event html model

--- a/quickview.html
+++ b/quickview.html
@@ -7,7 +7,24 @@
     <title>ScriptHooks QuickView</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <section id="event-handlers">
+      <h1>Event Handlers</h1>
+      <div class="handler">
+        <label for="event-name">
+          Event Name:
+        </label>
+        <input type="text" name="event-name">
+        <label for="event-enabled">
+          Enabled:
+        </label>
+        <input type="checkbox" name="event-enabled">
+        <label for="event-handler">
+          Event Handler:
+        </label>
+        <textarea name="name" rows="8" cols="80">
+        </textarea>
+      </div>
+    </section>
     <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
