--- a/quickview.html
+++ b/quickview.html
@@ -9,22 +9,11 @@
   <body>
     <section id="event-handlers">
       <h1>Event Handlers</h1>
-      <div class="handler">
-        <label for="event-name">
-          Event Name:
-        </label>
-        <input type="text" name="event-name">
-        <label for="event-enabled">
-          Enabled:
-        </label>
-        <input type="checkbox" name="event-enabled">
-        <label for="event-handler">
-          Event Handler:
-        </label>
-        <textarea name="name" rows="8" cols="80">
-        </textarea>
-      </div>
     </section>
+    <button id="add-event-handler">Add Event Handler</button>
+    <script src="js/modules/messageservice.js" charset="utf-8"></script>
+    <script src="js/modules/eventdirectory.js" charset="utf-8"></script>
+    <script src="js/modules/userinterface.js" charset="utf-8"></script>
     <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
