adds datastore for persistence

--- a/quickview.html
+++ b/quickview.html
@@ -12,6 +12,7 @@
     </section>
     <button id="add-event-handler">Add Event Handler</button>
     <script src="js/modules/messageservice.js" charset="utf-8"></script>
+    <script src="js/modules/datastore.js" charset="utf-8"></script>
     <script src="js/modules/eventdirectory.js" charset="utf-8"></script>
     <script src="js/modules/userinterface.js" charset="utf-8"></script>
     <script src="js/app.js" charset="utf-8"></script>
