adds capability to open in separate tab

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,9 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/dashboard.css">
     <title>ScriptHooks Dashboard</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <section id="event-handlers">
+      <h1>Event Handlers</h1>
+    </section>
+    <button id="add-event-handler">Add Event Handler</button>
+    <script src="js/modules/message-service.js" charset="utf-8"></script>
+    <script src="js/modules/datastore.js" charset="utf-8"></script>
+    <script src="js/modules/event-directory.js" charset="utf-8"></script>
+    <script src="js/modules/user-interface.js" charset="utf-8"></script>
+    <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
