--- a/quickview.html
+++ b/quickview.html
@@ -7,6 +7,9 @@
     <title>ScriptHooks QuickView</title>
   </head>
   <body>
+    <a href="/dashboard.html" target="_blank">
+      Open in separate tab.
+    </a>
     <section id="event-handlers">
       <h1>Event Handlers</h1>
     </section>
