introduces code manager service and ace editor dependency

--- a/quickview.html
+++ b/quickview.html
@@ -14,7 +14,10 @@
       <h1>Event Handlers</h1>
     </section>
     <button id="add-event-handler">Add Event Handler</button>
+
+    <script src="js/dependencies/ace-editor/ace.js" charset="utf-8"></script>
     <script src="js/modules/message-service.js" charset="utf-8"></script>
+    <script src="js/modules/code-manager.js" charset="utf-8"></script>
     <script src="js/modules/datastore.js" charset="utf-8"></script>
     <script src="js/modules/entry-directory.js" charset="utf-8"></script>
     <script src="js/modules/user-interface.js" charset="utf-8"></script>
