improves ui design

--- a/quickview.html
+++ b/quickview.html
@@ -8,10 +8,9 @@
   </head>
   <body>
     <a href="/dashboard.html" target="_blank">
-      Open in separate tab.
+      Open in a separate tab
     </a>
     <section id="event-handlers">
-      <h1>Event Handlers</h1>
     </section>
     <button id="add-event-handler">Add Event Handler</button>
 
