--- a/quickview.html
+++ b/quickview.html
@@ -20,6 +20,7 @@
     <script src="js/modules/datastore.js" charset="utf-8"></script>
     <script src="js/modules/entry-directory.js" charset="utf-8"></script>
     <script src="js/modules/user-interface.js" charset="utf-8"></script>
+    <script src="js/modules/event-binder.js" charset="utf-8"></script>
     <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
